# 6

./: .gitignore  AGENTS.md  CITATION.cff  README.md  pyproject.toml
.bootstrap/: build_prospective_sequence_ledger.py.gz.b64  prospective_sequences.py.gz.b64  test_prospective_sequences.py.gz.b64
benchmark/: PROFILE_TEMPLATE.md  README.md  SPEC.md  SUBMISSION_GUIDE.md  SYNTHETIC_PROFILE.md  SYNTHETIC_PROFILE_RESULT.md  catalog.json  reference_submission.json  submission.schema.json
docs/: .phase1_complete  .validation-trigger  ACTION_RESIDUAL_SHADOW_SCORER.md  ADVERSARIAL_REVIEW_FORM.md  AUTHENTICATED_PROSPECTIVE_PILOT_RESULT.md  BEAT_SOURCE_SEMANTICS.md  CI_SMOKE.md  COMPETITION_SUBMISSION_KIT.md  DATA_SCOPE.md  DATA_SOURCE_REGISTRY.md  DECISION_LOG.md  DOMAIN_TRANSFER_BLUEPRINTS.md  EXPERIMENT_000_PROTOCOL.md  EXPERIMENT_000_RESULT.md  EXPERIMENT_001_PROTOCOL.md  EXPERIMENT_001_RESULT.md  EXPERIMENT_002_PROTOCOL.md  EXPERIMENT_002_RESULT.md  EXPERIMENT_003_PROTOCOL.md  EXPERIMENT_003_RESULT.md  EXPERIMENT_004_PROTOCOL.md  EXPERIMENT_004_RESULT.md  EXPERIMENT_005_PROTOCOL.md  EXPERIMENT_005_RESULT.md  EXPERIMENT_006_PROTOCOL.md  EXPERIMENT_006_RESULT.md  EXPERIMENT_007_PROTOCOL.md  EXPERIMENT_007_RESULT.md  EXPERIMENT_008_PROTOCOL.md  EXPERIMENT_008_RESULT.md  EXPERIMENT_009_PROTOCOL.md  EXPERIMENT_009_RESULT.md  EXPERIMENT_010_PROTOCOL.md  EXPERIMENT_010_RESULT.md  EXPERIMENT_011_PROTOCOL.md  EXPERIMENT_011_RESULT.md  EXPERIMENT_012_PROTOCOL.md  EXPERIMENT_012_RESULT.md  EXPERIMENT_013_PROTOCOL.md  EXPERIMENT_013_RESULT.md  (+79 more)
paper/: FIGURE_CAPTIONS.md  README.md  claim_evidence_registry.json  manuscript.md  methods_claim_registry.json  methods_note.md  references.bib
scripts/: __init__.py  (+71 more)
src/: README.md
(+1291 files in other folders)
