[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-market-lab"
version = "0.1.0"
description = "Research-first football betting market data and anomaly laboratory"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32,<3",
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "joblib>=1.4,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
